--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -31,3 +31,7 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### Applictionsecrets ###
+## Ignore secret config ##
+src/main/resources/application-secret.properties
