--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,17 +1,30 @@
-# -------- Stage 1: Build the frontend --------
-FROM node:20 AS builder
+# # -------- Stage 1: Build the frontend --------
+# FROM node:20 AS builder
 
+# WORKDIR /app
+# COPY package*.json ./
+# RUN npm install
+
+# COPY . .
+# RUN npm run build
+
+# # -------- Stage 2: Serve with Nginx --------
+# FROM nginx:alpine
+
+# COPY --from=builder /app/build /usr/share/nginx/html
+
+# EXPOSE 80
+# CMD ["nginx", "-g", "daemon off;"]
+# Stage 1: Build
+FROM node:20 AS builder
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
-
 COPY . .
 RUN npm run build
 
-# -------- Stage 2: Serve with Nginx --------
+# Stage 2: Nginx serve
 FROM nginx:alpine
-
 COPY --from=builder /app/build /usr/share/nginx/html
-
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
