--- a/k8s/frontend-deployment.yaml
+++ b/k8s/frontend-deployment.yaml
@@ -1,7 +1,13 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: agro
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: frontend-deployment
+  namespace: agro
 spec:
   replicas: 1
   selector:
@@ -22,6 +28,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: frontend-service
+  namespace: agro
 spec:
   selector:
     app: frontend
