--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: backend-deployment
+  namespace: agro
 spec:
   replicas: 2
   selector:
@@ -35,6 +36,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: backend-service
+  namespace: agro
 spec:
   selector:
     app: backend
