--- a/k8s/mysql-deployment.yaml
+++ b/k8s/mysql-deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mysql
+  namespace: agro
 spec:
   selector:
     matchLabels:
@@ -40,6 +41,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mysql-service
+  namespace: agro
 spec:
   selector:
     app: mysql
